# corpuskit

./: .gitignore  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PUBLISHING.md
examples/: localized.example.yaml
examples/zero-config-docs/decisions/: adr1.md
examples/zero-config-docs/projectA/: intro.md
examples/zero-config-docs/projectB/: design.md
src/corpuskit/: __init__.py
src/corpuskit/adapters/: __init__.py  base.py  claude_code.py  mcp_json.py  settings_registry.py
src/corpuskit/cli/: __main__.py
src/corpuskit/compression/: compat.py  headroom.py  orchestrator.py  rtk.py
src/corpuskit/core/: config.py  defaults.py  platform.py
src/corpuskit/knowledge/: constraints.py  frontmatter.py  index.py  keyresolve.py  manifest.py  mcp_server.py  promptcontext.py  writeback.py
tests/: test_adapters.py  test_compression.py  test_config.py  test_knowledge.py
